Fri Nov  2 08:24:28 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (top_define_method): new method, main.define_method.
	  [ruby-core:45715] [Feature #6609]

	* eval.c (top_include): fix a warning message, main is not a class or
	  module.

Fri Nov  2 04:41:33 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#timestamp_file): use ! instead of %, a GNU
	  make special character.

Fri Nov  2 04:40:10 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_process.rb (test_execopts_preserve_env_on_exec_failure):
	  use never existing file in the current temporary directory.

Fri Nov  2 04:23:20 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/merger.rb: add feature to tag preview/rc.

Fri Nov  2 03:23:37 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/mkmf.rb: fix for if config["libdir"] is nil.

Thu Nov  1 23:06:01 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/make-snapshot: fix wrong regexp for releasing preview.
	  patched by mame.

Thu Nov  1 22:27:11 2012  Koichi Sasada <ko1@atdot.net>

	* NEWS: add a news about objspace,
	  ObjectSpace.reachable_objects_from.

Thu Nov  1 21:57:00 2012  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_new),
	  test/bigdecimal/test_bigdecimal.rb:
	  Fix exception message of BigDecimal constructor with a Float.

Thu Nov  1 21:52:20 2012  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_add),
	  test/bigdecimal/test_bigdecimal.rb:
	  need to specify precision for converting Rational and Float.
	  [ruby-core:48045] [Bug #7176]

Thu Nov  1 21:42:20 2012  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_process.rb: Revert r37404.  My ubuntu box has
	  actually the directory named "/nonexistent"...  Sorry.

Thu Nov  1 21:28:28 2012  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_process.rb: Process.exec raised EACCES on Linux
	  3.5.0-17-generic.  This is a temporal fix to rescue that exception.
	  Needs kosaki's review.
