@@ -1,3 +1,15 @@
+Fri Nov  2 14:47:53 2012  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* string.c (sym_to_proc, sym_call): A Proc created by Symbol#to_proc
+	  should close over the current refinements.
+	  [ruby-dev:46345] [Bug #7261]
+
+	* vm_eval.c (rb_call0, rb_search_method_entry,
+	  rb_funcall_passing_block_with_refinements): add a new argument
+	  `refinements' for the above changes.
+
+	* test/ruby/test_refinement.rb: related test.
+
 Fri Nov  2 08:24:28 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* proc.c (top_define_method): new method, main.define_method.
